iptables.test.rules
#! /bin/bash

*filter

#Allow VPN establishment
-A INPUT -m --status ESTABLISHED,RELATED -j ACCEPT
-A OUTPUT -p udp --dport 1194 -j ACCEPT
-A INPUT -p udp --sport 1194 -j ACCEPT
-A INPUT -p tcp --sport 443 -j ACCEPT
-A OUTPUT -p tcp --dport 443 -j ACCEPT
-A INPUT -p tcp --sport 943 -j ACCEPT
-A OUTPUT -p tcp --dport 943 -j ACCEPT

#ACCEPT all TUN connections
-A OUTPUT -o tun+ -j ACCEPT
-A INPUT -i tun+ -j ACCEPT

#Allow ssh access
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

#Default policies to drop all unless connections
-P INPUT DROP
-P OUTPUT DROP
-P FORWARD DROP

COMMIT

*nat

-A POSTROUTING -o eth1 -j MASQUERADE

COMMIT
